# witio

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: read_example.py  validate_full.py
tests/: test_metadata.py  test_project.py  test_tag.py  test_units_transform.py
witio/: __init__.py  data.py  metadata.py  project.py  tag.py  transform.py  units.py
