[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "witio"
dynamic = ["version"]
description = "Read and extract spectra, images, and metadata from WITec Project (.wip) / Data (.wid) files"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT-0" }
authors = [
    { name = "witio contributors" },
]
keywords = ["witec", "raman", "spectroscopy", "wip", "wid", "hyperspectral", "microscopy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Visualization",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
bitmap = ["pillow"]
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/iCalculate/witio"
Repository = "https://github.com/iCalculate/witio"
Issues = "https://github.com/iCalculate/witio/issues"
"Original MATLAB toolbox" = "https://gitlab.com/jtholmi/wit_io"

[tool.setuptools.dynamic]
version = { attr = "witio.__version__" }

[tool.setuptools.packages.find]
include = ["witio*"]

[tool.setuptools.package-data]
witio = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
